--- a/src/app.css
+++ b/src/app.css
@@ -130,6 +130,11 @@ p, b {
   padding: 0 25px;
 }
 
+.image-rounded {
+  border-radius: 5px;
+  border: 2px solid gray;
+}
+
 @media only screen and (min-width: 767px) {
   .desktop-zero-height {
     height: 0;
