cards page & loading more cards inside column

--- a/src/components/entity/column/single/card/styles.module.css
+++ b/src/components/entity/column/single/card/styles.module.css
@@ -1,6 +1,9 @@
 .root {
     min-width: 250px;
+    max-width: 30vw !important;
     text-align: center;
+    white-space: pre-line;
+    overflow-wrap: break-word;
 }
 
 .root > div {
